added get password change request route + docs
